--- a/index.html
+++ b/index.html
@@ -3410,9 +3410,7 @@
                             style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none"
                             data-framer-component-type="RichTextContainer">
                             <h3 style="--font-selector:R0Y7TWFucm9wZS01MDA=;--framer-font-family:'Manrope', 'Manrope Placeholder', sans-serif;--framer-font-size:20px;--framer-font-weight:500;--framer-line-height:1.5em;--framer-text-alignment:left;--framer-text-color:rgb(57, 0, 153)"
-                                class="framer-text">Beat monotony and give your Flutter app an edge with the
-                                transformative ‘gradient_icon’ package. No longer confine your icons to single colors.
-                                With this package, achieve beautiful, gradient-colored icons with total ease.</h3>
+                                class="framer-text">Beat monotony and give your Flutter app an edge with the transformative ‘gradient_icon’ package. No longer confine your icons to single colors. With this package, achieve beautiful, gradient-colored icons with total ease.</h3>
                         </div>
                         <div class="framer-1kcph5i">
                             <div class="framer-yvqtja" data-framer-name="Card" name="Card">
@@ -3474,8 +3472,7 @@
                             style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none"
                             data-framer-component-type="RichTextContainer">
                             <h3 style="--font-selector:R0Y7TWFucm9wZS01MDA=;--framer-font-family:'Manrope', 'Manrope Placeholder', sans-serif;--framer-font-weight:500;--framer-line-height:1.5em;--framer-text-alignment:left"
-                                class="framer-text">Our package offers a suite of unique features to help Flutter
-                                developers construct dynamic, gradient-colored icons.</h3>
+                                class="framer-text">Our package offers a suite of unique features to help Flutter developers construct dynamic, gradient-colored icons.</h3>
                         </div>
                     </div>
                     <div class="framer-31yrhc" data-framer-name="Image" id="WofauDHOZ" name="Image"></div>
@@ -3493,8 +3490,7 @@
                             style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none"
                             data-framer-component-type="RichTextContainer">
                             <h3 style="--font-selector:R0Y7TWFucm9wZS01MDA=;--framer-font-family:'Manrope', 'Manrope Placeholder', sans-serif;--framer-font-weight:500;--framer-line-height:1.5em;--framer-text-alignment:left"
-                                class="framer-text">Customize gradient colors easily, and smoothly blend gradient_icon
-                                with your existing projects.</h3>
+                                class="framer-text">Customize gradient colors easily, and smoothly blend gradient_icon with your existing projects.</h3>
                         </div>
                     </div>
                 </div>
